# app/Http/Controllers/Controller.php
@@ -10,13 +10,25 @@ use Illuminate\Foundation\Auth\Access\AuthorizesRequests;
 /**
  * @SWG\Swagger(
  *   basePath="/api",
+ *   schemes={"http", "https"},
  *   @SWG\Info(
  *     title="Pedido API",
- *     version="1.0.0"
- *   )
+ *     version="1.0.0",
+ *     description="L5 Swagger API description",
+ *     @SWG\Contact(email="darius@matulionis.lt"), 
+ *   ),
  * )
  */
 
+ /**
+ * @SWG\SecurityScheme(
+ *   securityDefinition="ApiKeyAuth",
+ *   type="apiKey",
+ *   in="header",
+ *   name="Authorization" 
+ * )
+ */
+ 
 class Controller extends BaseController
 {
     use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
